# ai-agent-data-scientist

./: .env.example  .gitignore  CLAUDE.md  HANDBOOK.md  PROJECT_OVERVIEW.md  README.md  pyproject.toml
app/: main.py
app/api/: deps.py
app/api/v1/: analysis.py  datasets.py
app/core/: config.py
app/domain/: analysis_models.py  exceptions.py  models.py  state_models.py
app/infrastructure/: code_runner.py  notebook_exporter.py  style_config.py  unit_registry.py
app/schemas/: analysis.py  datasets.py
app/services/: context_manager.py  data_agent.py  data_tools.py  knowledge_tools.py  memory.py  tool_definitions.py
data/domain_docs/: coding_standards.md
design-doc/: SRS_robustness.md  architecture_data_scientist_agent.html  sequence_diagram_drawio.html
design-doc/03_software_design/: 03_react_service_design.md  05_code_execution_design.md  08_api_design.md  09_exception_handling_design.md  10_hld_architecture.md  11_api_interface_definition.md  12_architecture_decision_records.md
scripts/: create_sample_data.py  verify_install.py
tests/: conftest.py
tests/api/: test_analysis.py  test_v1_analysis.py
tests/domain/: test_exceptions.py  test_state_models.py
tests/infrastructure/: test_code_runner.py
tests/services/: test_context_manager.py  test_data_agent.py  test_data_tools.py  test_knowledge_tools.py  test_memory.py  test_native_tool_agent.py  test_redis_memory.py
