[project]
name = "ai-agent-data-scientist"
version = "0.1.0"
description = "Data Scientist AI Agent — FastAPI + Anthropic SDK + ReAct + Physical Validation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "anthropic>=0.50.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-multipart>=0.0.9",
    "python-dotenv>=1.0",
    "pint>=0.24",
    "pandas>=2.0",
    "numpy>=1.26",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "nbformat>=5.10",
    "openpyxl>=3.1",
    "pyarrow>=14.0",
    "redis>=5.0",
]

[project.optional-dependencies]
jupyter = [
    "jupyter_client>=8.0",
    "ipykernel>=6.29",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.4",
    "fakeredis[aioredis]>=2.20",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
]
